--- a/src/index.css
+++ b/src/index.css
@@ -7,14 +7,14 @@
 }
 
 body {
-  font-family: "Poppins", sans-serif;
+  font-family: Netflix Sans,Helvetica Neue,Segoe UI,Roboto,Ubuntu,sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   display: flex;
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background: url('./components/Assets/moutain01.jpg') no-repeat center center;
+  background: url('./components/Assets/netflix.jpg') no-repeat center center;
   background-size: cover;
   height: 100vh;
   width: 100vw;
